Better Styling of The Terminal.